<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_10"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        style="@style/matchwrap"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/matchwrap"
            android:layout_marginStart="@dimen/fiftn_dp">

            <TextView
                android:id="@+id/sch_title"
                style="@style/title_text"
                android:text="@string/hi" />

            <TextView
                android:id="@+id/greeting_"
                style="@style/title_detail_text"
                android:layout_below="@id/sch_title"
                tools:text="Good morning" />

            <ImageView
                android:id="@+id/icon_img"
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:layout_alignTop="@id/greeting_"
                android:layout_margin="5dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/greeting_"
                android:src="@drawable/ic_cloudy_night"
                android:textSize="14sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_content"
                    android:text="@string/card_details" />

                <include
                    layout="@layout/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="16dp"
                    android:digits="01234 56789"
                    android:gravity="center"
                    android:hint="@string/enter_card_number"
                    android:inputType="number"
                    android:maxLength="19"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/btn"
                    style="@style/ButtonStyle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_gravity="center"
                    android:text="@string/click_to_scan_card" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_dialog"
        android:visibility="gone" />
</FrameLayout>